# IoT-fundamentals-pi

./: .gitignore  docker_compose.yaml
db/scripts/: init.sql
mqtt/config/data/: cluster.uuid  node.uuid
mqtt/config/data/configs/: app.2023.11.15.22.27.53.config  cluster.hocon.2023.11.07.20.24.02.632.bak  cluster.hocon.2023.11.07.20.26.12.373.bak  cluster.hocon.2023.11.07.20.26.30.164.bak  cluster.hocon.2023.11.07.20.26.31.634.bak  cluster.hocon.2023.11.09.20.44.54.813.bak  cluster.hocon.2023.11.09.20.44.55.973.bak  cluster.hocon.2023.11.09.21.16.36.923.bak  vm.2023.11.15.22.30.07.args  vm.2023.11.15.22.31.47.args
mqtt/config/data/mnesia/emqx@172.18.0.2/: cluster_rpc_commit.DCD  cluster_rpc_mfa.DCD  emqx_activated_alarm.DCD  emqx_activated_alarm.DCL  emqx_admin.DCD  emqx_admin_jwt.DCD  emqx_admin_jwt.DCL  emqx_dashboard_monitor.DCD  emqx_dashboard_monitor.DCL  emqx_deactivated_alarm.DCD  emqx_telemetry.DCD
mqtt/config/data/mnesia/emqx@172.18.0.3/: cluster_rpc_commit.DCD  (+11 more)
mqtt/config/etc/: emqx.conf
mqtt/config/etc/certs/: ca.pem  emqx.key  emqx.pem
services/data_gateway/: Dockerfile  main.py  requirements.txt
services/website/: Cargo.toml  Dockerfile
services/website/src/: main.rs
services/website/src/ai/: dataset.csv  main.rs
services/website/src/pages/: config.html  history.html  index.html
services/website/src/pages/static/js/: graph.mjs  historic.js  index.js
services/website/src/pages/static/styles/: history.css  index.css
services/website/src/pages/static/uplot/: main.mjs
services/website/src/routes/: ai.rs  api.rs  client.rs  mod.rs
(+182 files in other folders)
