[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-multipart = "0.6.1"

serde = "1.0.189"
serde_json = "1.0.107"

# machine learning
smartcore = {version = "0.3.2", features = ["serde"]} # ai v4
csv = "1.2.2"

bincode = "1.3.3"

mysql = "*"
dotenv = "*"
base64 = "0.21.5"

futures = "0.3.29"